--- a/src/app/componentes/navegacion/navegacion.component.html
+++ b/src/app/componentes/navegacion/navegacion.component.html
@@ -36,7 +36,7 @@
               <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
               <a href="/home" class="rounded-md bg-teal-400 px-3 py-2 text-sm font-medium text-white" aria-current="page">Home</a>
               <a href="/presentacion" class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-teal-400 hover:text-white">Historia</a>
-              <a href="#" class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-teal-400 hover:text-white">Noticias</a>
+              <a href="/blog" class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-teal-400 hover:text-white">Noticias</a>
               <a href="/calendario" class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-teal-400 hover:text-white">Eventos</a>
               <a href="/mapa" class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-teal-400 hover:text-white">Negocios</a>
               <a href="/admin" class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-teal-400 hover:text-white">Panel</a>
@@ -93,9 +93,9 @@
     <div class="sm:hidden" id="mobile-menu">
       <div class="space-y-1 px-2 pb-3 pt-2">
         <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
-        <a href="#" class="block rounded-md bg-gray-900 px-3 py-2 text-base font-medium text-white" aria-current="page">Home</a>
+        <a href="/home" class="block rounded-md bg-gray-900 px-3 py-2 text-base font-medium text-white" aria-current="page">Home</a>
         <a href="/presentacion" class="block rounded-md px-3 py-2 text-base font-medium text-gray-300 hover:bg-gray-700 hover:text-white">Historia</a>
-        <a href="#" class="block rounded-md px-3 py-2 text-base font-medium text-gray-300 hover:bg-gray-700 hover:text-white">Noticias</a>
+        <a href="/blog" class="block rounded-md px-3 py-2 text-base font-medium text-gray-300 hover:bg-gray-700 hover:text-white">Noticias</a>
         <a href="/calendario" class="block rounded-md px-3 py-2 text-base font-medium text-gray-300 hover:bg-gray-700 hover:text-white">Eventos</a>
         <a href="/negocios" class="block rounded-md px-3 py-2 text-base font-medium text-gray-300 hover:bg-gray-700 hover:text-white">Negocios</a>
       </div>
