--- a/src/app/componentes/admin/blog-admin/blog-admin.component.html
+++ b/src/app/componentes/admin/blog-admin/blog-admin.component.html
@@ -17,13 +17,14 @@
       <!-- Contenido -->
       <div>
         <label class="block text-sm font-medium mb-1" for="content">Contenido</label>
-        <textarea
+         <editor apiKey="qobixfl8d269htsdhbgkwr5cglvx91ltdouomicefl5sxc3x"
+          [(ngModel)]="blogForm.controls['content'].value"
           id="content"
           formControlName="content"
           class="w-full bg-gray-800 border border-gray-700 rounded-md p-2 text-white focus:outline-none focus:ring-2 focus:ring-blue-500"
-          rows="4"
-          required
-        ></textarea>
+        >
+        </editor>
+       
       </div>
   
       <!-- Categoría -->
