--- a/src/app/componentes/blog/blog.component.html
+++ b/src/app/componentes/blog/blog.component.html
@@ -1,22 +1,20 @@
 <div class="container">
-    <h1>Lista de Publicaciones</h1>
-    <table class="table table-striped">
-      <thead>
-        <tr>
-          <th>Título</th>
-          <th>Categoría</th>
-          <th>Acciones</th>
-        </tr>
-      </thead>
-      <tbody>
-        @for (blog of blogs; track blog.title) {
-            <tr>
-                <td>{{ blog.title }}</td>
-                <td>{{ blog.category || 'Sin categoría' }}</td>
-              </tr>
-        }
-        
-      </tbody>
-    </table>
+  <h1>Lista de Publicaciones</h1>
+  <div class="row">
+    <!-- Crear una tarjeta para cada publicación -->
+    @for (blog of blogs; track blog.title) {
+      <div class="col-md-4">
+        <div class="card mb-4">
+          <img src="{{ blog.image }}" class="card-img-top" alt="Imagen de {{ blog.title }}">
+          <div class="card-body">
+            <h5 class="card-title">{{ blog.title }}</h5>
+            <p class="card-text">{{ blog.category || 'Sin categoría' }}</p>
+            <a [routerLink]="['/blog']" class="btn btn-primary">Leer más</a> <!-- Cambiar a la ruta adecuada para abrir el post -->
+          </div>
+        </div>
+      </div>
+    }
   </div>
+</div>
+
   
