--- a/src/app/componentes/navegacion/navegacion.component.html
+++ b/src/app/componentes/navegacion/navegacion.component.html
@@ -34,11 +34,29 @@
             <div class="flex items-center space-x-4">
               <div class="flex items-center">
               <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
-              <a href="/home" class="rounded-md bg-teal-400 px-3 py-2 text-sm font-medium text-white" aria-current="page">Home</a>
-              <a href="/presentacion" class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-teal-400 hover:text-white">Historia</a>
-              <a href="/blog" class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-teal-400 hover:text-white">Noticias</a>
-              <a href="/calendario" class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-teal-400 hover:text-white">Eventos</a>
-              <a href="/mapa" class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-teal-400 hover:text-white">Negocios</a>
+              <a routerLink="/home" routerLinkActive="bg-teal-400 text-white"
+              class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-teal-400 hover:text-white">
+              Home</a>
+              <a routerLink="/presentacion" 
+              routerLinkActive="bg-teal-400 text-white"
+              class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-teal-400 hover:text-white">
+             Historia
+           </a>
+           <a routerLink="/blog" 
+              routerLinkActive="bg-teal-400 text-white"
+              class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-teal-400 hover:text-white">
+             Noticias
+           </a>
+           <a routerLink="/calendario" 
+              routerLinkActive="bg-teal-400 text-white"
+              class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-teal-400 hover:text-white">
+             Eventos
+           </a>
+           <a routerLink="/mapa" 
+              routerLinkActive="bg-teal-400 text-white"
+              class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-teal-400 hover:text-white">
+             Negocios
+           </a>
               <a href="/admin" class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-teal-400 hover:text-white">Panel</a>
             </div>
             </div>
@@ -93,10 +111,37 @@
     <div class="sm:hidden" id="mobile-menu">
       <div class="space-y-1 px-2 pb-3 pt-2">
         <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
-        <a href="/home" class="block rounded-md bg-gray-900 px-3 py-2 text-base font-medium text-white" aria-current="page">Home</a>
-        <a href="/presentacion" class="block rounded-md px-3 py-2 text-base font-medium text-gray-300 hover:bg-gray-700 hover:text-white">Historia</a>
-        <a href="/blog" class="block rounded-md px-3 py-2 text-base font-medium text-gray-300 hover:bg-gray-700 hover:text-white">Noticias</a>
-        <a href="/calendario" class="block rounded-md px-3 py-2 text-base font-medium text-gray-300 hover:bg-gray-700 hover:text-white">Eventos</a>
-        <a href="/negocios" class="block rounded-md px-3 py-2 text-base font-medium text-gray-300 hover:bg-gray-700 hover:text-white">Negocios</a>
+        <a 
+        routerLink="/home" 
+        routerLinkActive="bg-gray-900 text-white" 
+        class="block rounded-md px-3 py-2 text-base font-medium text-gray-300 hover:bg-gray-700 hover:text-white" 
+        aria-current="page">
+        Home
+      </a>
+      <a 
+        routerLink="/presentacion" 
+        routerLinkActive="bg-gray-900 text-white" 
+        class="block rounded-md px-3 py-2 text-base font-medium text-gray-300 hover:bg-gray-700 hover:text-white">
+        Historia
+      </a>
+      <a 
+        routerLink="/blog" 
+        routerLinkActive="bg-gray-900 text-white" 
+        class="block rounded-md px-3 py-2 text-base font-medium text-gray-300 hover:bg-gray-700 hover:text-white">
+        Noticias
+      </a>
+      <a 
+        routerLink="/calendario" 
+        routerLinkActive="bg-gray-900 text-white" 
+        class="block rounded-md px-3 py-2 text-base font-medium text-gray-300 hover:bg-gray-700 hover:text-white">
+        Eventos
+      </a>
+      <a 
+        routerLink="/negocios" 
+        routerLinkActive="bg-gray-900 text-white" 
+        class="block rounded-md px-3 py-2 text-base font-medium text-gray-300 hover:bg-gray-700 hover:text-white">
+        Negocios
+      </a>
+      
       </div>
     </div>
